--- a/cover.css
+++ b/cover.css
@@ -7,7 +7,7 @@
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: rgb(15, 14, 14);
+  color: rgb(214, 28, 28);
   text-shadow: none; /* Prevent inheritance from `body` */
 }
 
@@ -18,7 +18,7 @@
 
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(12, 11, 11, 0.5);
 }
 
 .cover-container {
